# aoc2025

./: .gitignore  README.md  pyproject.toml
01/: main.py
02/: main.py  output.txt
src/: base_solution.py  start_day.py
src/day1/: solution.py
src/day2/: solution.py
src/day3/: solution.py
src/day4/: solution.py
src/day5/: solution.py
src/day6/: solution.py
tests/: test_day1.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py
